# personal-ai-assistant

./: .gitignore  Readme.md  package-lock.json  package.json
llm-assistant-backend/: .gitignore  prepare_python.sh  pyproject.toml  requirements.txt  run.py
llm-assistant-backend/app/: main.py
llm-assistant-backend/app/models/: chat.py
llm-assistant-backend/app/services/: llm_service.py
llm-assistant-docstore/: .gitignore  load_documents.py  load_documents.sh  prepare_python.sh  requirements.txt
llm-assistant-docstore/app/: main.py
llm-assistant-docstore/app/models/: document.py
llm-assistant-docstore/app/services/: document_service.py
llm-assistant-docstore/documents/: sample_data.txt  srvn.txt
llm-assistant-docstore/models/: download_model.py
llm-assistant-frontend/: .gitignore  LICENSE  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
llm-assistant-frontend/src/: index.css  index.ts  llm-assistant-frontend.js  styles.js
llm-assistant-frontend/src/components/: chat-window.js  code-block.js  context-panel.js
