[tool.poetry]
name = "llm-assistant-backend"
version = "0.1.0"
description = "Backend for LLM Assistant"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
llama-cpp-python = "^0.2.6"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 